# cpp-logging-playground

./: CMakeLists.txt  LICENSE  README.md
boost_console/: CMakeLists.txt  console.cpp
boost_file/: CMakeLists.txt  file.cpp
spdlog_console/: CMakeLists.txt  console.cpp  main.cpp
spdlog_file/: CMakeLists.txt  file.cpp
spdlog_tcp/: CMakeLists.txt  tcp.cpp
spdlog_udp/: CMakeLists.txt  udp.cpp  udp_client.h  udp_client_windows.h  udp_sink.h
